--- a/views/layout.html
+++ b/views/layout.html
@@ -12,6 +12,8 @@
     <style>
         body {
             font-family: Arial;
+            background-image: url('images/hangmanbackground.png');
+            background-size: cover;
         }
 
         /**
