--- a/views/layout.html
+++ b/views/layout.html
@@ -12,7 +12,7 @@
     <style>
         body {
             font-family: Arial;
-            background-image: url('images/hangmanbackground.png');
+            background-image: url('images/CI-Python-Linter.png');
             background-size: cover;
         }
 
