--- a/views/layout.html
+++ b/views/layout.html
@@ -12,7 +12,7 @@
     <style>
         body {
             font-family: Arial;
-            background-image: url('/images/CI-Python-Linter.png');
+            background-image: url('https://res.cloudinary.com/dxla1usfm/image/upload/v1697375675/Untitled_design_onb5lo.png');
             background-size: cover;
         }
 
