--- a/views/layout.html
+++ b/views/layout.html
@@ -12,6 +12,11 @@
     <style>
         body {
             font-family: Arial;
+        }
+
+        .container {
+            width: 100%;
+            padding-top: 56.25%;
             background-image: url('https://res.cloudinary.com/dxla1usfm/image/upload/v1697376008/Project3/hangmangame_nlkfnm.png');
             background-size: cover;
         }
