--- a/views/layout.html
+++ b/views/layout.html
@@ -11,10 +11,14 @@
     <title>Python Terminal by Code Institute</title>
     <style>
         body {
+            position: relative;
             font-family: Arial;
         }
 
         .container {
+            position:absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             padding-top: 56.25%;
             background-image: url('https://res.cloudinary.com/dxla1usfm/image/upload/v1697376008/Project3/hangmangame_nlkfnm.png');
