--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <body>
     <button onclick="window.location.reload()">Run Program</button>
-    <div id="terminal" class="container"></div>
+    <div id="terminal"></div>
+    <div class="container"></div>
 
     <script>
         var term = new Terminal({
