--- a/views/layout.html
+++ b/views/layout.html
@@ -20,9 +20,10 @@
             top: 0;
             left: 0;
             width: 100%;
-            padding-top: 56.25%;
+            height: 100%;
             background-image: url('https://res.cloudinary.com/dxla1usfm/image/upload/v1697376008/Project3/hangmangame_nlkfnm.png');
-            background-size: cover;
+            background-size: 100% auto;
+            background-attachment: fixed;
             z-index: -1;
         }
 
