--- a/views/layout.html
+++ b/views/layout.html
@@ -20,7 +20,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%,
+            height: 100%;
             background-image: url('https://res.cloudinary.com/dxla1usfm/image/upload/v1697376008/Project3/hangmangame_nlkfnm.png');
             background-attachment: fixed;
             z-index: -1;
