--- a/views/layout.html
+++ b/views/layout.html
@@ -19,7 +19,7 @@
             position:absolute;
             top: 0;
             left: 0;
-            background-size: 100% auto;
+            background-size: 100%;
             background-image: url('https://res.cloudinary.com/dxla1usfm/image/upload/v1697376008/Project3/hangmangame_nlkfnm.png');
             background-attachment: fixed;
             z-index: -1;
