--- a/views/layout.html
+++ b/views/layout.html
@@ -22,6 +22,9 @@
             width: 100%;
             height: 100%;
             background-image: url('https://res.cloudinary.com/dxla1usfm/image/upload/v1697376008/Project3/hangmangame_nlkfnm.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
             z-index: -1;
         }
 
