--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,8 @@
 <body>
+    <div class="container">
     <button onclick="window.location.reload()">Run Program</button>
     <div id="terminal"></div>
-    <div class="container"></div>
+    </div>
 
     <script>
         var term = new Terminal({
