--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,7 @@
 <body>
-    <div class="container">
     <button onclick="window.location.reload()">Run Program</button>
     <div id="terminal"></div>
-    </div>
+    <div class="container"></div>
 
     <script>
         var term = new Terminal({
