--- a/views/layout.html
+++ b/views/layout.html
@@ -25,6 +25,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
+            background-attachment: fixed;
             z-index: -1;
         }
 
