--- a/views/layout.html
+++ b/views/layout.html
@@ -25,7 +25,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
-            background-attachment: fixed;
+            overflow: hidden;
             z-index: -1;
         }
 
