--- a/views/layout.html
+++ b/views/layout.html
@@ -20,13 +20,18 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: auto;
+            height: 100%;
             background-image: url('https://res.cloudinary.com/dxla1usfm/image/upload/v1697376008/Project3/hangmangame_nlkfnm.png');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
             overflow: hidden;
             z-index: -1;
+        }
+
+        .image {
+            max-width: 100%
+            height: auto;
         }
 
         /**
