--- a/views/layout.html
+++ b/views/layout.html
@@ -14,6 +14,8 @@
         body {
             position: relative;
             font-family: Arial;
+            margin: 0;
+            overflow: hidden;
         }
 
         .container {
@@ -26,7 +28,6 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
-            overflow: hidden;
             z-index: -1;
         }
 
