--- a/views/layout.html
+++ b/views/layout.html
@@ -23,7 +23,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             background-image: url('https://res.cloudinary.com/dxla1usfm/image/upload/v1697376008/Project3/hangmangame_nlkfnm.png');
             background-size: cover;
             background-repeat: no-repeat;
@@ -31,10 +31,6 @@
             z-index: -1;
         }
 
-        .image {
-            max-width: 100%
-            height: auto;
-        }
 
         /**
         * Default styles for xterm.js
